BB-1211 regenerate client
