# src/Generated/Exception/GetAuthRoleCollectionEndpointBadRequestException.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace Datenkraft\Backbone\Client\AccessManagementApi\Generated\Exception;
+
+class GetAuthRoleCollectionEndpointBadRequestException extends BadRequestException
+{
+    private $errorResponse;
+    public function __construct(\Datenkraft\Backbone\Client\AccessManagementApi\Generated\Model\ErrorResponse $errorResponse)
+    {
+        parent::__construct('Bad Request', 400);
+        $this->errorResponse = $errorResponse;
+    }
+    public function getErrorResponse()
+    {
+        return $this->errorResponse;
+    }
+}
