# src/Generated/Exception/GetAuthRoleCollectionEndpointInternalServerErrorException.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace Datenkraft\Backbone\Client\AccessManagementApi\Generated\Exception;
+
+class GetAuthRoleCollectionEndpointInternalServerErrorException extends InternalServerErrorException
+{
+    private $errorResponse;
+    public function __construct(\Datenkraft\Backbone\Client\AccessManagementApi\Generated\Model\ErrorResponse $errorResponse)
+    {
+        parent::__construct('Server error', 500);
+        $this->errorResponse = $errorResponse;
+    }
+    public function getErrorResponse()
+    {
+        return $this->errorResponse;
+    }
+}
